--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar productos</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styleedit.css">
 </head>
 <body>
     <form action="/edit/" method="post">
@@ -33,6 +34,7 @@
             <option value="3">Alta resolucion</option>
             <option value="4">Inalambricas</option>
             </select>
+            <a class="button" href="/tabimagen">Insertar img</a>
             <input type="submit" value="Editar">
     </form>
 </body>
