--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insertar productos</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styleedit.css">
 </head>
 <body>
     <form action="/insert-product" method="POST">
@@ -27,6 +28,7 @@
             <option value="3">Alta resolucion</option>
             <option value="4">Inalambricas</option>
             </select>
+            <a class="button" href="/tabimagen">Insertar img</a>
             <input type="submit" value="Insertar">
     </form>
 </body>
