--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -1,56 +1,41 @@
+<!-- compras.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interfaz Administrativa - Todos los Clientes y Compras</title>
+  <title>Interfaz Administrativa - Compras y Clientes</title>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
-  <h1>Clientes y Compras</h1>
-
-  <h2>Clientes</h2>
+  <a href="/login" class="btn btn-primary">Volver al menú</a>
+  <h1>Interfaz Administrativa - Compras y Clientes</h1>
+  <h2>Clientes:</h2>
+  <ul>
+    <% clients.forEach(client => { %>
+      <li><%= client.email %></li>
+    <% }); %>
+  </ul>
+  <!-- Mostrar lista de compras -->
+  <h2>Compras:</h2>
   <table>
     <thead>
       <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Correo Electrónico</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% clients.forEach(client => { %>
-        <tr>
-          <td><%= client.id %></td>
-          <td><%= client.name %></td>
-          <td><%= client.email %></td>
-        </tr>
-      <% }); %>
-    </tbody>
-  </table>
-
-  <h2>Compras</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Cliente ID</th>
-        <th>Producto ID</th>
+        <th>ID Cliente</th>
+        <th>ID Producto</th>
         <th>Cantidad</th>
         <th>Total Pagado</th>
         <th>Fecha</th>
-        <th>IP Cliente</th>
       </tr>
     </thead>
     <tbody>
       <% purchases.forEach(purchase => { %>
         <tr>
-          <td><%= purchase.id %></td>
           <td><%= purchase.client_id %></td>
           <td><%= purchase.product_id %></td>
           <td><%= purchase.quantity %></td>
           <td><%= purchase.total_paid %></td>
           <td><%= purchase.fecha %></td>
-          <td><%= purchase.ip_cliente %></td>
         </tr>
       <% }); %>
     </tbody>
