--- a/views/loginclient.ejs
+++ b/views/loginclient.ejs
@@ -23,8 +23,8 @@
     <label for="password">Contraseña:</label>
     <input type="password" id="password" name="password" required>
   
-    <button type="submit">Iniciar Sesión</button> <a class="buttonn" href="/registerclient">Registrarse</a>
-
+    <button type="submit">Iniciar Sesión</button>
+    <a class="buttonn" href="/registerclient">Registrarse</a>
   </form>
 </body>
 </html>
