--- a/views/confirmacion.ejs
+++ b/views/confirmacion.ejs
@@ -1,4 +1,3 @@
-<!-- confirmacion.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +7,9 @@
   <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
-  <a class="my-button" onclick="location.href='/'">Volver a la interfaz pública</a>
-  <h1>Confirmación de Compra</h1>
+  <a class="my-button" onclick="location.href='/'">Volver al menú</a>
+  <h1>¡Compra Confirmada!</h1>
+  <p>Gracias por tu compra. A continuación, se detallan los productos:</p>
   <table>
     <thead>
       <tr>
