--- a/views/recuperarpassword.ejs
+++ b/views/recuperarpassword.ejs
@@ -9,6 +9,11 @@
 <body>
   <a class="botonnn" onclick="location.href='/'">Volver</a>
   <h1>Recuperar Contraseña</h1>
+
+  <% if (typeof error !== 'undefined' && error !== null) { %>
+    <p style="color: red; text-align: center;"><%= error %></p>
+  <% } %>
+
   <form action="/recover-password" method="POST">
     <label for="email">Ingrese su Correo Electrónico:</label>
     <input type="email" id="email" name="email" required>
