--- a/views/recuperarpassword.ejs
+++ b/views/recuperarpassword.ejs
@@ -11,7 +11,9 @@
   <h1>Recuperar Contraseña</h1>
 
   <% if (typeof error !== 'undefined' && error !== null) { %>
-    <p style="color: red; text-align: center;"><%= error %></p>
+    <div class="error-message">
+      <p><%= error %></p>
+    </div>
   <% } %>
 
   <form action="/recover-password" method="POST">
